<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uci.wmp.animalspan.fragments.questions.EffortQuestion">


    <TextView
        android:id="@+id/tvEffortQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/gap_large"
        android:gravity="center_vertical"
        android:text="@string/how_hard"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_large" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="@dimen/seekbar_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEffortQuestion"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:max="100"
        android:paddingLeft="@dimen/gap_large"
        android:paddingRight="@dimen/gap_large"
        android:progress="50"
        android:progressDrawable="@drawable/seekbar_progressbar"
        android:thumb="@drawable/thumb" />

    <RelativeLayout
        android:id="@+id/rlSeekBarLabels"
        android:layout_width="@dimen/seekbar_width"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBar"
        android:layout_alignStart="@+id/seekBar"
        android:layout_below="@+id/seekBar">

        <TextView
            android:id="@+id/tvSeekBarFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/too_easy"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvSeekBarSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/just_right"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvSeekBarThird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/too_hard"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/white" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlSeekBarLabels"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/ivEffortQuestionsDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/tvProgress"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/gap_medium"
        android:contentDescription="@string/desc"
        android:src="@drawable/done" />

</RelativeLayout>